--- a/Main.ipynb
+++ b/Main.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1f14f1df",
+   "id": "cb507f30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4c5772e6",
+   "id": "88dc72e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,55 +24,22 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "28ee33e8",
-   "metadata": {},
-   "source": [
-    "# move to utils file:\n",
-    "\n",
-    "from datetime import datetime, timedelta\n",
-    "\n",
-    "def find_date_range(date_list):\n",
-    "    \"\"\"\n",
-    "    given a list of dates in the MM/DD/YYYY format, \n",
-    "    find the earliest and the latest ones.\n",
-    "    \"\"\"\n",
-    "    # Convert the dates to datetime objects\n",
-    "    date_objects = [datetime.strptime(date_str, \"%m/%d/%Y\") for date_str in date_list]\n",
-    "    # Find the earliest and latest datea using the min() and max functions\n",
-    "    earliest_date = min(date_objects)\n",
-    "    latest_date = max(date_objects)\n",
-    "    # Convert the dates back to the MM/DD/YYYY format\n",
-    "    earliest_date_str = earliest_date.strftime(\"%m/%d/%Y\")\n",
-    "    latest_date_str = latest_date.strftime(\"%m/%d/%Y\")\n",
-    "    return earliest_date_str, latest_date_str"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "f91c5e3b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_pre = pd.read_csv('Pre-FTB_Report.csv')\n",
-    "df_post = pd.read_csv('Post-FTB_Report.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "415b35e1",
    "metadata": {},
    "outputs": [],
    "source": [
+    "df_pre = pd.read_csv('original_files/Pre-FTB_Report.csv')\n",
+    "df_post = pd.read_csv('original_files/Post-FTB_Report.csv')\n",
+    "\n",
     "df_pre['Annual hotel spend'] = df_pre['Annual hotel spend'].fillna(0).astype(int)\n",
     "df_post['Annual hotel spend'] = df_post['Annual hotel spend'].fillna(0).astype(int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "1bd18b26",
    "metadata": {},
    "outputs": [
@@ -92,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "0d9d5121",
    "metadata": {},
    "outputs": [],
@@ -105,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "17e77db3",
    "metadata": {},
    "outputs": [
@@ -113,7 +80,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-7-d5a987eeabe9>:19: SettingWithCopyWarning: \n",
+      "<ipython-input-8-d5a987eeabe9>:19: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -147,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "3ccd5e37",
    "metadata": {},
    "outputs": [],
@@ -169,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "e78ca393",
    "metadata": {},
    "outputs": [
@@ -1075,7 +1042,7 @@
        "[30 rows x 23 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1091,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "c6049f70",
    "metadata": {
     "scrolled": true
@@ -1104,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "151813c7",
    "metadata": {},
    "outputs": [],
@@ -1123,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "372bda76",
    "metadata": {},
    "outputs": [
@@ -1172,7 +1139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6e75a03",
+   "id": "ca98a39d",
    "metadata": {},
    "outputs": [],
    "source": []
