--- a/Main.ipynb
+++ b/Main.ipynb
@@ -1,9 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "6746bb20",
+   "metadata": {},
+   "source": [
+    "$Expected FTB Booking and #Expected FTB Accounts\n",
+    "\n",
+    "For each representative (opportunity owner) in Pre-FTB report, collect all the accounts under their name, together with Expected FTB Date (simply 'date') and Annual hotel spend (simply 'spend').\n",
+    "\n",
+    "Starting from the date, split the spend over the following twelve months. Start with the month the date belongs to. (There are some strange cases, e.g. Adam Ward, Frontier Building Corp, FTB date = 30 Nov, i.e. the end of the month already, but Nov tkes one entire 12th part.)\n",
+    "\n",
+    "Some accounts don't have a daet. I'm ignoring those.\n",
+    "\n",
+    "For each month, sum these fractions over all the accounts. Also count the number of accounts. These numbers are the $Expected FTB Booking and #Expected FTB Accounts respectively, and they're shown in the Pipeline Summary.\n",
+    "\n",
+    "Treat 'post' data in the same way."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "cb507f30",
+   "execution_count": null,
+   "id": "5a1f3da2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "4f582ccf",
+   "id": "4a96d9aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c805404",
+   "id": "c11a5602",
    "metadata": {},
    "source": [
     "# Import Data"
@@ -60,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "320a6cb9",
+   "id": "30329eda",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "748dfd88",
+   "id": "a3d3591b",
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "91ac35ee",
+   "id": "6252865b",
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "704f7bf4",
+   "id": "9c6e4fc7",
    "metadata": {},
    "source": [
     "# Owners"
@@ -359,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "c00ef6a0",
+   "id": "c0baa395",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "0ec164e6",
+   "id": "f66b0bdc",
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "5db09650",
+   "id": "1b1c9180",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "33f68b72",
+   "id": "3dab4b2b",
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64afd848",
+   "id": "8e9ffade",
    "metadata": {},
    "source": [
     "# Pre-FTB"
@@ -1081,7 +1099,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "254aab69",
+   "id": "d8f03c5e",
    "metadata": {},
    "source": [
     "# Post-FTB"
@@ -1110,7 +1128,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "9544976e",
+   "id": "75f68395",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1124,7 +1142,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "8e347ea7",
+   "id": "2fde30e4",
    "metadata": {},
    "outputs": [
     {
@@ -1166,7 +1184,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "f1c69907",
+   "id": "5582754b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1188,7 +1206,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "8f745e44",
+   "id": "8ed6dc06",
    "metadata": {},
    "outputs": [
     {
@@ -1578,7 +1596,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "ba206a0d",
+   "id": "72909074",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1589,7 +1607,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "a5913725",
+   "id": "5eb6f466",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1608,7 +1626,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "3516fa9c",
+   "id": "a1542332",
    "metadata": {
     "scrolled": true
    },
@@ -1736,7 +1754,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "0d582ffe",
+   "id": "d69fb369",
    "metadata": {},
    "outputs": [
     {
@@ -1777,7 +1795,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "1132d882",
+   "id": "aba64d86",
    "metadata": {},
    "outputs": [
     {
@@ -1901,7 +1919,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c3d4871",
+   "id": "fe7e1126",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1909,7 +1927,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02bfbc9d",
+   "id": "f23b33a8",
    "metadata": {},
    "outputs": [],
    "source": []
